# starry-next

./: Cargo.toml  Makefile  search-index.js
apps/nimbos/: Makefile
apps/nimbos/rust/: Makefile
apps/nimbos/rust/src/arch/: loongarch64.rs
configs/: loongarch64.toml
scripts/: config.toml.temp  get_deps.sh
src/: loader.rs  main.rs  task.rs
src/syscall_imp/: mod.rs
starry/: index.html
starry/config/: constant.KERNEL_STACK_SIZE.html  constant.USER_SPACE_BASE.html  constant.USER_SPACE_SIZE.html  constant.USER_STACK_SIZE.html  constant.USER_STACK_TOP.html
starry/syscall_imp/mm/mmap/: struct.MmapFlags.html  struct.MmapProt.html
